<resources>
    <string name="app_name">InstagramClone_android_2</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Signup</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="emailHint">Email (optional)</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
