<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_gravity="top"
    android:layout_marginTop="4dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etChangeUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etChangeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Zip Code"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etChangePostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Zip Code"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Radius to others in miles"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etChangeDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Radius to others in miles (i.e. 1)"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Interests"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etChangeInterests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Interests"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/etSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="#1E88E5"
        android:text="Save Changes"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF" />


</LinearLayout>